# provean

./: LICENSE  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
examples/: Makefile.am  Makefile.in  P04637.var
scripts/: Makefile.am  Makefile.in  provean.sh.in
src/: Common.cpp  Common.h  Makefile.am  Makefile.in  Options.cpp  Options.h  ScoreMatrix.cpp  ScoreMatrix.h  Sequence.cpp  Sequence.h  SequenceDB.cpp  SequenceDB.h  Tables.cpp  Tables.h  Variant.cpp  Variant.h  provean.cpp
